# ue-shed

./: .editorconfig  .gitignore  .oxfmtrc.json  AGENTS.md  README.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json
.github/: actionlint.yaml
crates/uasset-parser/: Cargo.toml  README.md
crates/uasset-parser/src/: codec.rs  package.rs  property.rs
docs/: README.md  showcase.md  vision-and-architecture.md
plans/: 001-texture-asset-audit-demo.md  004-authoring-session-service.md  005-peculiar-sheets-draft-editor.md  007-conflicts-rich-types-and-views.md  008-adopt-effect-v4-core.md  009-effect-schema-errors-contracts.md  010-effect-infrastructure-services.md  011-effect-domain-services.md  012-effect-cli-runtime.md  013-effect-workbench-runtime-ipc.md  014-effect-renderer-solid.md  015-effect-observability-enforcement.md  019-stream-world-scout-transforms.md  021-consume-published-unreal-rc.md  022-harden-public-contracts.md  023-separate-formulas-and-license-mit.md  024-establish-ci-and-candidate-releases.md  025-publish-parser-package-boundary.md  026-ship-plugin-bundles-and-installer.md  027-adopt-parser-in-downstream-host.md  028-compose-map-review-downstream.md  029-authoring-downstream-integration-gate.md  README.md
scripts/: benchmark-uasset.mjs  check-effect-architecture.mjs  check-license-boundary.mjs  check-license-boundary.test.mjs  create-release-candidate.mjs  create-release-candidate.test.mjs  evaluate-data-authoring-agents.mjs  pack-public-packages.mjs  plugin-bundle.mjs  plugin-bundle.test.mjs  (+9 more)
(+254 files in other folders)
